--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="./app.css">
 </head>
 <body>
-  <ul>
-    <li>Marcy</li>
-    <li>Bob</li>
-    <li>Betty</li>
-  </ul>
+  <header>
+    <h1>Dogs!</h1>
+  </header>
+  <main>
+    <ul class="dogs">
+    </ul>
+  </main>
 <script src="./app.js"></script> 
 </body>
 </html>
